-- Version 2.15.9, released ...

 * Added Minecraft 1.19 as a separate map format
 * For the Minecraft 1.19 format, waterlogged leaf blocks are now supported (in other words leaf blocks on Custom Objects will be placed underwater for Minecraft 1.19 and later)
 * Custom build heights now work for Minecraft 1.19 (including upgrading Minecraft 1.18 maps to 1.19 in Minecraft)

-- Version 2.15.8, released 3-11-2022

 * Bug fix: fix a crash when Exporting Custom Cave/Tunnel layers with a Floor Dimension
 * Bug fix: show the correct name when clearing a layer from the Global Operations tool
 * Various bug fixes

-- Version 2.15.7, released 29-10-2022

 * If the spawn point is not on the selected tiles for a Test Export, it will automatically temporarily be moved to the middle of the selected area
 * Bug fix: when Merging, don't apply the stored tile selection if "Merge all tiles" is selected
 * Bug fix: when Importing, don't import unfinished chunks that only have biomes in them as empty chunks
   + These chunks occur around the edges of Minecraft 1.18+-generated maps
   + If you have trouble with such incorrect empty chunks around the edges of your imported map, you have two options:
     - Import the map again now that this bug has been fixed
     - Manually remove the Void layer from those chunks, and raise them up to terrain height (they will be at bedrock)
 * Bug fix: schem files with embedded entities no longer result in an error
 * Bug fix: fix an Import error when encountering region files whose size is not a multiple of 4KB
 * Various bug fixes and usability improvements

-- Version 2.15.6, released 23-10-2022

 * The Tool Options panel now shows a name and description for the currently selected tool
 * The Height Map Import screen has received some improvements:
   + It is now possible to Import a height map as a Master Dimension to make it easier to create large worlds from scratch based on a height map